--- a/index.css
+++ b/index.css
@@ -10,15 +10,15 @@ html, body { -ms-user-select:none; -moz-user-select:-moz-none; -webkit-user-sele
 /* view */
 
 .view { min-width:960px; min-height:1080px; position:relative; }
-.view .header { width:960px; height:150px; padding:50px; margin:0 auto; background-color:#EEE; border:solid 3px #000;}
-.view .content { width:960px; height:700px; padding:50px; margin:0 auto; background-color:#FFF; border:solid 3px #000;}
+.view .header { width:960px; height:150px; margin:0 auto; background-color:#EEE; border:solid 3px #000;}
+.view .content { width:960px; height:700px; margin:0 auto; background-color:#FFF; border:solid 3px #000;}
 .view .footer { width:960px; height:50px; margin:0 auto; background-color:#EEE; border:solid 3px #000;}
 
 /* header */
 .header .title { text-align:center; font-size:30px; font-weight:bold; margin-top:50px; }
 
 /* footer */
-.footer p { font-size:10px; color:#000;  }
+.footer p { font-size:10px; color:#000; text-align:center; }
 
 /* content */
 
